--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.12"
+    "mongoose": "^5.12.12",
+    "sass": "^1.34.1"
   }
 }
