--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.12.12",
     "sass": "^1.34.1"
